Б4 - убрал лишние BR

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     как Бен Стиллер!
                   </p>
                 </a>
-                <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
+                <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
                 <a class="button slider-item-button" href="catalog-item.html">
                 Подробнее</a>
                 <h4 class="visually-hidden">Основные параметры товара</h4>
@@ -106,7 +106,7 @@
                     правильно!
                   </p>
                 </a>
-                <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
+                <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
                 <a class="button slider-item-button" href="catalog-item.html">
                 Подробнее</a>
                 <h4 class="visually-hidden">Основные параметры товара</h4>
@@ -131,11 +131,10 @@
               <div class="slider-right-column">
                 <span class="slider-item-number">03</span>
                 <a href="catalog-item.html">
-                  <p class="slider-item-slogan">Порхает как бабочка,<br>
-                    жалит как пчела!
+                  <p class="slider-item-slogan">Порхает как бабочка, жалит как пчела!
                   </p>
                 </a>
-                <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
+                <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
                 <a class="button slider-item-button" href="catalog-item.html">
                 Подробнее</a>
                 <h4 class="visually-hidden">Основные параметры товара</h4>
@@ -159,7 +158,7 @@
           <h2 class="visually-hidden">Разделы каталога</h2>
           <ul class="catalog-menu-list">
             <li class="catalog-menu-item catalog-menu-vr"><a href="catalog-vr.html">Виртуальная реальность</a></li>
-            <li class="catalog-menu-item catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы <br>для селфи</a></li>
+            <li class="catalog-menu-item catalog-menu-monopods"><a href="catalog-monopods.html">Моноподы для селфи</a></li>
             <li class="catalog-menu-item catalog-menu-actioncameras"><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
             <li class="catalog-menu-item catalog-menu-fitness"><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
             <li class="catalog-menu-item catalog-menu-smartwatches"><a href="catalog-smartwatches.html">Умные часы</a></li>
