Б11 - поправил форму (модальное окно)

--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
         </p>
         <p class="write-us-item write-us-text-item">
           <label class="write-us-label" for="email-text">Текст письма:</label>
-          <input class="write-us-text" id="email-text" type="text" name="email-text" placeholder="В свободной форме">
+          <textarea class="write-us-text" id="email-text" name="email-text" placeholder="В свободной форме"></textarea>
+          <!-- <input class="write-us-text" id="email-text" type="text" name="email-text" placeholder="В свободной форме"> -->
         </p>
         <button class="button email-send-button" type="submit">Отправить</button>
       </form>
