Поправил Д24, Д20 - карта без JS

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="main-header container">
         <nav class="main-navigation">
           <div class="main-header-logo-block">
-            <a class="main-header-logo">
+            <a class="main-header-logo" href="index.html">
               <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
             </a>
           </div>
