index - добавил js

--- a/index.html
+++ b/index.html
@@ -253,13 +253,10 @@
             </a>
             <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
             <div class="contacts-map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112548877993!2d37.52742931610148!3d55.68703098053589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1546180559575" width="560" height="222" style="border:0" allowfullscreen></iframe>
+              <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112548877993!2d37.52742931610148!3d55.68703098053589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1546180559575" width="560" height="222" style="border:0" allowfullscreen></iframe>
               <noscript>
                 <img src="img/map.jpg" width="560" height="222" alt="Офис компании по адресу ул. Строителей, 15, Москва">
               </noscript>
-              <!-- <a href="#">
-                <img src="img/map.jpg" width="560" height="222" alt="Карта">
-              </a> -->
             </div>
             <p>
               <a class="button write-us-button" href="write-us.html">
@@ -340,7 +337,6 @@
         <p class="write-us-item write-us-text-item">
           <label class="write-us-label" for="email-text">Текст письма:</label>
           <textarea class="write-us-text" id="email-text" name="email-text" placeholder="В свободной форме"></textarea>
-          <!-- <input class="write-us-text" id="email-text" type="text" name="email-text" placeholder="В свободной форме"> -->
         </p>
         <button class="button email-send-button" type="submit">Отправить</button>
       </form>
@@ -351,11 +347,10 @@
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.112548877993!2d37.52742931610148!3d55.68703098053589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1546180559575" width="960" height="559" style="border:0" >
       </iframe>
-      <!-- <p>
-        <img src="img/map-big.jpg" width="960" height="559" alt="Офис компании по адресу ул. Строителей, 15, Москва">
-      </p> -->
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
+
+    <script src="js/script.min.js"></script>
 
   </body>
 </html>
